Commited all in dev

--- a/home.html
+++ b/home.html
@@ -9,5 +9,6 @@
 <h1>Home body......</h1>
 <h2>Type something here....</h2>
 <h3>Something here....</h3>
+<h4>Somethign will be here....</h4>
 </body>
 </html>
